--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,7 @@
+body {
+    padding: 5px;
+}
+
 #btn-submit {
     margin-left: 15px;
     margin-bottom: 15px;
@@ -20,4 +24,24 @@
 .error-info {
     padding: 5px;
     color: #ff1a1a;
+}
+
+.loading {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    background-color: rgba(179,179,179,0.5);
+}
+
+.loading .hourglass {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 50px;
+    height: 70px;
+    margin-left: -25px;
+    margin-top: -35px;
 }
