adding status colors to reservations

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -45,3 +45,12 @@ body {
     margin-left: -25px;
     margin-top: -35px;
 }
+
+.legend-item {
+    text-align: center;
+    color: white;
+    margin-bottom: 5px;
+    border-radius: 6px;
+    height: 25px;
+    line-height: 25px;
+}
