--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,7 @@
 body {
-    padding: 5px;
+    padding: 10px;
     font-size: 16px;
+    background-color: #ffffe6;
 }
 
 @media print {
@@ -11,6 +12,27 @@ body {
     margin-left: 15px;
     margin-bottom: 15px;
 }*/
+
+.main-header {
+    height: 120px;
+    line-height: 120px;
+    text-align: center;
+    color: white;
+    background-color: #408DD2;
+}
+
+.sub-header {
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    color: white;
+    background-color: #0C5DA5;
+}
+
+#reservation-form-container, #payment-container {
+    margin-top: 15px;
+}
+
 
 .form-errors {
     background-color: #ffcccc;
@@ -55,8 +77,6 @@ body {
     text-align: center;
     color: white;
     margin-bottom: 5px;
-    border-radius: 6px;
     height: 25px;
     line-height: 25px;
-    margin-left: 15px;
 }
