--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,7 @@
 body {
     padding: 10px;
     font-size: 16px;
-    background-color: #ffffe6;
+    background-color: #f2f2f2;
 }
 
 @media print {
