--- a/public/css/clndr.css
+++ b/public/css/clndr.css
@@ -15,6 +15,11 @@
     order: 1;
     flex-shrink: 1;
     text-align: center;
+    font-weight: bolder;
+}
+
+.clndr-ctrl:hover {
+    cursor: pointer;
 }
 
 .clndr-next-button, .clndr-prev-button {
@@ -41,25 +46,26 @@
     flex-grow: 1;
     flex-shrink: 0;
     color: #333333;
+    font-weight: bolder;
 }
 
 .days {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    background-color: #d9d9d9;
     align-content: stretch;
 }
 
 .day {
     order: 1;
     flex-grow: 1;
+    flex-basis: 0;
     flex-shrink: 1;
-    border: 1px solid #f2f2f2;
+    border: 1px solid black;
     with: 50px;
     min-height: 125px;
     color: #333333;
-    flex-basis: 0;
+    overflow-x: hidden;
 }
 
 .day-content {
@@ -73,12 +79,9 @@
     color: #a6a6a6;
 }
 
-.event {
-    border: 1px solid #29a329;
-}
-
 .day-event {
-    color: white
+    font-size: 12px;
+    color: white;
 }
 
 .day-event a {
@@ -88,8 +91,6 @@
 .day-event a:hover {
     cursor: pointer;
 }
-
-
 
 .payment-accepted {
     background-color: #29a329;
