--- a/public/css/clndr.css
+++ b/public/css/clndr.css
@@ -79,7 +79,7 @@
 /*------- Reservations By Date -------*/
 .reservation-element {
     width: 300px;
-    background-color: #d9d9d9;
+    background-color: #e6e6e6;
     color: #000;
     float: left;
     margin-right: 5px;
