--- a/server/public/css/index.css
+++ b/server/public/css/index.css
@@ -60,7 +60,7 @@ body {
     top: 0;
     left: 0;
     z-index: 100;
-    background-color: rgba(179,179,179,0.5);
+    background-color: rgba(179,179,179,0.7);
 }
 
 .loading .hourglass {
@@ -71,6 +71,16 @@ body {
     height: 70px;
     margin-left: -25px;
     margin-top: -35px;
+}
+
+.loading .text {
+    position: absolute;;
+    top: 50%;
+    left: 50%;
+    width: 200px;
+    margin-top: 25px;
+    margin-left: -100px;
+    text-align: center;
 }
 
 .legend-item {
